# jaeger-telemetry-python-demo

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
