[project]
name = "python-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "logfire[fastapi,httpx,openai]>=4.4.0",
    "loguru>=0.7.3",
    "openai>=1.107.0",
    "ruff>=0.12.12",
]
